--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,8 @@ services:
     environment:
       SPRING_PROFILES_ACTIVE: postgres
       POSTGRES_URL: 'jdbc:postgresql://db/petclinic'
+      SPRING_DATASOURCE_USERNAME: petclinic
+      SPRING_DATASOURCE_PASSWORD: petclinic
 
   db:
     image: postgres:14.3-alpine
