--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,14 @@
       <scope>test</scope>
     </dependency>
 
+    <dependency>
+      <groupId>org.springframework.restdocs</groupId>
+      <artifactId>spring-restdocs-restassured</artifactId>
+      <scope>test</scope>
+      <version>2.0.6.RELEASE</version>
+    </dependency>
+
+
     <!-- Databases - Uses H2 by default -->
     <dependency>
       <groupId>com.h2database</groupId>
